# jankscripten

./: .gitmodules  Cargo.toml  LICENSE  README.md  stdlib.notwasm
libjankscripten/: Cargo.toml  build.rs
libjankscripten/src/: lib.rs  main.rs  opts.rs  pos.rs  pretty.rs  rope.rs  rts_function.rs  string_escaping.rs  z3ez.rs
libjankscripten/src/jankierscript/: coercion_insertion.rs  constructors.rs  from_javascript.rs  mod.rs  std_lib.rs  syntax.rs  type_checking.rs  types.rs  typing.rs
libjankscripten/src/jankyscript/: box_assigns.rs  closure_convert.rs  coercions.rs  collect_assigns.rs  compile.rs  constructors.rs  from_js.rs  fv.rs  insert_returns.rs  methods.rs  mod.rs  operators.rs  operators_z3.rs  pretty.rs  prototypes.rs  select_method_call.rs  syntax.rs  type_checking.rs  typeinf.rs  typeinf_env.rs  typeinf_z3.rs  types.rs  typing.rs  walk.rs
libjankscripten/src/javascript/: add_blocks.rs  compile_for.rs  constructors.rs  desugar.rs  desugar_bracket_str.rs  desugar_function_applications.rs  desugar_function_stmts.rs  desugar_functions.rs  desugar_logical.rs  desugar_loops.rs  desugar_switch.rs  desugar_this.rs  desugar_updates.rs  desugar_vardecls.rs  lift_vars.rs  mod.rs  name_gen.rs  normalize_std_lib_calls.rs  parser.rs  pretty_ast.rs  quote.rs  resugar_method_call.rs  simpl_fancy_updates.rs  swc_parser.rs  syntax.rs  testing.rs  walk.rs
libjankscripten/src/notjankyscript/: constructors.rs  syntax.rs  typing.rs
libjankscripten/src/notwasm/: bare_runtime.notwasm  compile.rs  constructors.rs  elim_gotos.rs  from_jankyscript.rs  index.rs  intern.rs  (+19 more)
(+205 files in other folders)
