[package]
name = "libjankscripten"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

[dependencies]
ressa = "*"
resast = "*"
thiserror = "*"
pretty = "^0.10.0"
parity-wasm = "^0.41.0"
combine = "3.8.1"
im-rc = "15.0.0"
combine-language = "*"
strum = "0.19"
strum_macros = "0.19"
