[package]
name = "libjankscripten"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

[dependencies]
thiserror = "*"
pretty = "^0.10.0"
parity-wasm = "^0.41.0"
im-rc = "15.0.0"
strum = "0.19"
strum_macros = "0.19"
swc_ecma_parser = "0.33.3"
swc_common = "0.9.0"
swc_ecma_ast = "0.28.0"
swc_atoms = "0.2.2"
derive_more = "*"
cfgrammar = "*"
lrlex = "*"
lrpar = "*"
z3 = "0.10.*"
paste = "^1.0"
maplit = "^1.0.2"
lazy_static = "^1.4.0"

[build-dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"